--- a/FlusBankWeb/Views/BanksOperation/Create.cshtml
+++ b/FlusBankWeb/Views/BanksOperation/Create.cshtml
@@ -1,59 +1,68 @@
-﻿@model EntityFlus.BanksOperation
-
-@{
-    ViewBag.Title = "Crear operación";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Crear operación</h2>
-
-
-@using (Html.BeginForm()) 
+﻿@if (Session["User"] != null)
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <label class = "control-label col-md-2">Operación</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+    if (Session["Rol"].ToString().Equals("1"))
+    {
+        @model EntityFlus.BanksOperation
+
+        ViewBag.Title = "Crear operación";
+        Layout = "~/Views/Shared/_Layout.cshtml";
+
+        <h2>Crear operación</h2>
+
+
+        using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-horizontal">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <label class="control-label col-md-2">Operación</label>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-md-2">Descripción</label>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-md-2">Tipo</label>
+                    <div class="col-md-10">
+                        <select class="form-control" name="Type" id="Type">
+                            <option value="1">Pasivo</option>
+                            <option value="2">Activo</option>
+                        </select>
+                        @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Crear" class="btn btn-default" />
+                    </div>
+                </div>
             </div>
+        }
+
+        <div>
+            @Html.ActionLink("Volver a la lista", "Index")
         </div>
 
-        <div class="form-group">
-            <label class="control-label col-md-2">Descripción</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
 
-        <div class="form-group">
-            <label class="control-label col-md-2">Tipo</label>
-            <div class="col-md-10">
-                <select class="form-control" name="Type" id="Type">
-                    <option value="1">Pasivo</option>
-                    <option value="2">Activo</option>
-                </select>
-                @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Crear" class="btn btn-default" />
-            </div>
-        </div>
- </div>
-}
-
-<div>
-    @Html.ActionLink("Volver a la lista", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    }
+    else
+    {
+        Layout = "~/Views/Shared/_Error.cshtml";
+    }
 }
