--- a/FlusBankWeb/Views/Users/Edit.cshtml
+++ b/FlusBankWeb/Views/Users/Edit.cshtml
@@ -1,50 +1,60 @@
-﻿@model EntityFlus.User
-
-@{
-    ViewBag.Title = "Editar";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Editar usuario</h2>
-
-
-@using (Html.BeginForm())
+﻿
+@if (Session["User"] != null)
 {
-    @Html.AntiForgeryToken()
+    if (Session["Rol"].ToString().Equals("1"))
+    {
+        @model EntityFlus.User
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+        ViewBag.Title = "Editar";
+        Layout = "~/Views/Shared/_Layout.cshtml";
 
-        <div class="form-group">
-            <label class="control-label col-md-2">Email</label>
-            <div class="col-md-10">
-                <input class="form-control" type="text" name="Email" id="Email" />
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        <h2>Editar usuario</h2>
+
+
+        using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-horizontal">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.Id)
+
+                <div class="form-group">
+                    <label class="control-label col-md-2">Email</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="text" name="Email" id="Email" />
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-md-2">Número de móvil</label>
+                    <div class="col-md-10">
+                        <input class="form-control" type="text" name="PhoneNumber" id="PhoneNumber" />
+                        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Editar" class="btn btn-warning" />
+                    </div>
+                </div>
             </div>
+        }
+
+        <div>
+            @Html.ActionLink("Volver a la lista", "Index")
         </div>
 
-        <div class="form-group">
-            <label class="control-label col-md-2">Número de móvil</label>
-            <div class="col-md-10">
-                <input class="form-control" type="text" name="PhoneNumber" id="PhoneNumber" />
-                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Editar" class="btn btn-warning" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Volver a la lista", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
+    }
+    else
+    {
+        //Layout = "~/Views/Shared/_Error.cshtml";
+        <h2>Vista cliente</h2>
+    }
 }
